# weather-app-wasm

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: main.rs
weather-app-desktop/: Cargo.toml
weather-app-desktop/src/: main.rs
weather-index/: Cargo.toml  Dioxus.toml
weather-index/src/: main.rs
weather-index/templates/: scripts.js
