[package]
name = "weather-app-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
weather_util_rust = {version="0.14", features=["stack-string"]}
time = {version="0.3", features=["serde-human-readable", "macros", "formatting"]}
anyhow = "1.0"
dioxus = { version = "0.2", features = ["desktop"] }
tokio = {version="1.21", features=["full"]}
lazy_static = "1.4"
http = "0.2"
serde = {version="1.0", features=["derive"]}
serde_json = "1.0"
dotenvy = "0.15"
dirs = "4.0"
envy = "0.4"
isocountry = "0.3"
derive_more = "0.99"
indexmap = "1.8"
log = "0.4"
env_logger = "0.9"
parking_lot = "0.12"
stack-string = "0.7"

[[bin]]
name = "weather-app-rust"
path = "src/main.rs"
doc = false
